[package]
name = "audact"
version = "0.5.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/audact"
homepage = "https://github.com/shockham/audact"
documentation = "https://docs.rs/audact"
description = "Minimalist synth and sequencing lib"

[dependencies]
rand = "0.5"
rodio = "0.8"
derive_builder = "0.6"

[dev-dependencies]
rand = "0.5"
