[package]
name = "audact"
version = "0.5.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/audact"
homepage = "https://github.com/shockham/audact"
documentation = "https://docs.rs/audact"
description = "Minimalist synth and sequencing lib"

[dependencies]
rand = "0.7"
rodio = "0.11"
derive_builder = "0.9"
